# Luki

./: .gitignore  LICENSE  index.html  package.json  pnpm-lock.yaml  tsconfig.json
scripts/: e2e-smoke.mjs
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  models.rs
src/lib/: api.ts  types.ts
