[package]
name = "luki"
version = "0.1.0"
description = "A local-first visual novel private library."
authors = ["Luki"]
edition = "2021"

[lib]
name = "luki_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
